--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Flor Soraire, Gabriel Mendez, Matias Narcotti, Alejo Duhart, Guadalupe Ruiz">
-    <meta name="description" content="gestionador de canchas de futbol">
-    <meta name="keywords" content="oganizador, futbol, canchas, alquinar, reservar">
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Icon/Soccer_icon-icons.com_67819.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GoalKeep Organizer</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Flor Soraire, Gabriel Mendez, Matias Narcotti, Alejo Duhart, Guadalupe Ruiz">
+  <meta name="description" content="gestionador de canchas de futbol">
+  <meta name="keywords" content="oganizador, futbol, canchas, alquinar, reservar">
+  <link rel="icon" type="image/svg+xml" href="/src/assets/Icon/Soccer_icon-icons.com_67819.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <title>GoalKeep Organizer</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
